<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL" Id="{cbc564b6-f054-4fb6-aa31-f1d319e83d4d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	LED_BestellingGeplaatst : BOOL;		//Led die aangeeft dat bestelling is geplaatst

	BT_BestellingPlaatsen	: BOOL;		//Knop om bestelling te simuleren
	BT_Deurbel				: BOOL;		//Knop die deurbel simuleert
	
	
	Reset					: BOOL;		//Reset programma
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>